# aoc-haskell-2022

./: CHANGELOG.md  LICENSE  advent-of-code.cabal  aoc-haskell2022.cabal  package.yaml
app/: Main.hs
src/: DayOne.hs  DayTwo.hs  Elves.hs  Input.hs  RockPaperScisors.hs  Rucksacks.hs
